changing approach to fix resume button on mobile

--- a/client/src/containers/home/home.css
+++ b/client/src/containers/home/home.css
@@ -219,19 +219,16 @@
 
 .resume a:before {
     content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
     position: absolute;
-    top: -0.125rem;
-    left:-0.125rem;
+    inset: 0;
+    border-radius: inherit;
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
     background-size: 400%;
     z-index: -1;
-    filter: blur(0.313rem);
-    width: calc(100% + 0.25rem);
-    height: calc(100% + 0.25rem);
-    animation: glowing 20s linear infinite;
+    filter: blur(0.5rem);
     opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 0.5rem;
+    transition: opacity 0.3s ease-in-out;
+    animation: glowing 20s linear infinite;
 }
 
 .resume a:active {
